# ai_10k-risk-extractor_llm

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  render.yml
.github/workflows/: sync-to-hf-space.yml
backend/doc/: walkthrough.md
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/v1/endpoints/: analysis.py
backend/src/core/: config.py  exceptions.py
backend/src/domain/: models.py
backend/src/services/: llm_service.py  pdf_service.py
