[project]
name = "fin-risk-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pypdf>=6.4.0",
    "streamlit>=1.51.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
]
